fixing display page on mobile v5

--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -32,15 +32,14 @@
     overflow: scroll;
   }
   @media only screen and (max-width: $bp-small) {
-    height: auto;
+    height: 10rem;
     width: 100%;
     flex-direction: row;
     padding: 0 1rem;
-    margin: 1rem 0;
+    margin: 1rem 0 0 0;
     order: 2;
     justify-content: center;
 
-    // delete is no work
     position: fixed;
     bottom: 0;
   }
