--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -106,8 +106,7 @@ $color-black: #000000;
     padding: 2rem;
   }
   @media only screen and (max-width: $bp-small) {
-    // height: 80vh;
-    height: fit-content;
+    height: 85vh;
     width: 100%;
     padding: 2rem 1rem;
     order: 1;
